--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: dacortes <dacortes@student.42.fr>          +#+  +:+       +#+         #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/18 09:54:18 by dacortes          #+#    #+#              #
-#    Updated: 2024/04/25 11:10:16 by dacortes         ###   ########.fr        #
+#    Updated: 2024/04/30 14:03:58 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
